# resume

./: .gitignore  AGENTS.md  CLAUDE.md  OPERATION.md  README.md  _check.py  _check2.py  _fix_dialog.py  _fix_dialog2.py  _fix_section.py  docker-compose.dev.yml  tmp_resume_eval_orig.py  write_card.py
backend/: .dockerignore  .env  .env.example  Dockerfile  litellm_uuid.txt  pyproject.toml  requirements.txt
backend/app/: container.py  deps.py  main.py
backend/app/api/: deps.py
backend/app/common/: file_utils.py  sql_utils.py  validators.py  version_parser.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: config.py  constants.py  container.py  exceptions.py  logging.py  security.py
backend/app/db/: mysql.py  redis.py
backend/app/infrastructure/: client.py  http_client.py
backend/app/llm/: gateway.py  model_router.py
backend/app/models/: __init__.py  agent_action.py  agent_context_snapshot.py  agent_memory.py  agent_message.py  agent_run.py  agent_session.py  agent_user_model_runtime_config.py  agent_workspace_preference.py  eval_dimension.py  eval_template.py  eval_template_dimension.py  eval_template_skill.py  eval_template_tag.py  job_application.py  job_eval_dimension.py  job_position.py  job_position_tag.py  job_skill.py  llm_model_config.py  resume.py  resume_eval_detail.py  resume_job_match.py  resume_skill_hit.py  sys_dept.py  sys_dept_employee.py  sys_employee.py  sys_tag.py  sys_user.py
backend/app/repositories/: __init__.py  agent_memory_repository.py  agent_repository.py  agent_user_model_runtime_config_repository.py  agent_workspace_preference_repository.py  application_repo.py  application_repository.py  dept_repo.py  dept_repository.py  employee_repo.py  employee_repository.py  eval_repo.py  eval_template_repo.py  eval_template_repository.py  evaluation_repository.py  job_repo.py  job_repository.py  llm_config_repository.py  repository.py  resume_repo.py  tag_repo.py  user_repo.py
backend/app/schemas/: account_management.py  application.py  auth.py  common.py  dept.py  eval_template.py  job.py  response.py
backend/app/services/: __init__.py  account_management_service.py  agent_context_service.py  agent_orchestrator_runner.py  agent_resume_pipeline_service.py  agent_resume_service.py  agent_runtime_config_service.py  agent_runtime_service.py  agent_service.py  agent_session_service.py  agent_stream_buffer_service.py  auth_service.py  (+15 more)
backend/celery_app/: celery.py
backend/tests/: conftest.py
(+548 files in other folders)
