[project]
name = "resume-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the resume platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.27",
    "aiomysql==0.3.2",
    "PyMySQL==1.1.2",
    "SQLAlchemy==2.0.49",
    "redis==7.4.0",
    "aiosmtplib==5.1.0",
    "celery==5.6.3",
    "langchain-openai==1.2.1",
    "langchain==1.2.15",
    "langchain-core==1.3.2",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.1.10",
    "langgraph-checkpoint-sqlite==3.1.0",
    "aiosqlite==0.21.0",
    "Jinja2==3.1.6",
    "PyYAML==6.0.3",
    "python-docx==1.2.0",
    "PyPDF2==3.0.1",
    "aiofiles==25.1.0",
    "email-validator==2.3.0",
    "httpx==0.28.1",
    "sse-starlette==3.0.4",
    "bcrypt==5.0.0",
    "cryptography==46.0.7",
    "docling>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.llm.prompts" = ["templates/*.yaml"]
